# syftr

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml.sample  pyproject.toml
.github/workflows/: lint.yml  pypi.yaml
docs/: LLM_Guide.md  adding-new-flows.md  datasets.md  debugging.md  llm-configuration.md  llm-providers.md
examples/: 1-welcome.ipynb  2-long_running_studies.ipynb  3-prompt-optimization.ipynb  99-my-docs.ipynb  irt_analysis.ipynb
notebooks/: analysis.ipynb  baselines.ipynb  compare.ipynb  create_dataset.ipynb  create_dataset_gemini_synthetic.ipynb  data.ipynb  errors.ipynb  forwarded_llm_locally.ipynb  insights.ipynb  irt_analysis.ipynb  judging-judges-data.ipynb  prompt_optimization.ipynb  remaining.ipynb  running_flows.ipynb  seeding_experiment.ipynb  silver_bullets.ipynb  synthetic_multihop_deepeval.ipynb  synthetic_multihop_ragas.ipynb  synthetic_multihop_ragas_vllm.ipynb  top-to-knee.ipynb  transfer_learning.ipynb
studies/: cerebras2--mix-with-local--financebench_hf.yaml  cerebras2--mix-with-local--phantomwikiv050_hf--depth_20_size_10000_seed_3.yaml  cerebras4--rag-and-agents-cerebras-only--financebench_hf.yaml  cerebras5--rag-and-agents-cerebras-only--financebench_hf.yaml  cerebras5--rag-and-agents-cerebras-only--phantomwikiv050_hf--depth_20_size_10000_seed_3.yaml  cerebras5--rag-and-agents-local-only--financebench_hf.yaml  cerebras5--rag-and-agents-local-only--phantomwikiv050_hf--depth_20_size_10000_seed_3.yaml  example-dr-docs.yaml  example-prompt-optimization.yaml  example1--50-trials--drdocs_hf.yaml  example1--small-study--drdocs_hf.yaml  gpt-oss-showdown.yaml  gpt-oss1--cost--financebench_hf.yaml  gpt-oss1--cost--hotpotqa_hf-train_hard--train_hard.yaml  gpt-oss1--cost--multihoprag_hf.yaml  gpt-oss1--cost--phantomwikiv050_hf--depth_20_size_10000_seed_3.yaml  gpt-oss1--latency--financebench_hf.yaml  gpt-oss1--latency--hotpotqa_hf-train_hard--train_hard.yaml  gpt-oss1--latency--multihoprag_hf.yaml  gpt-oss1--latency--phantomwikiv050_hf--depth_20_size_10000_seed_3.yaml  judge-eval-all.yaml  judge-eval-consensus-with-replacement.yaml  judge-eval-consensus.yaml  judge-eval-simple.yaml  llm1--thinking--financebench_hf.yaml  llm1--thinking--phantomwikiv050_hf--depth_20_size_10000_seed_3.yaml  llm2--test--drdocs_hf.yaml  llm2--thinking--financebench_hf.yaml  llm2--thinking--infinitebench_hf--longbook_qa_eng.yaml  llm2--thinking--multihoprag_hf.yaml  llm2--thinking--phantomwikiv050_hf--depth_20_size_10000_seed_3.yaml  my-docs.yaml  no-retriever-financebench.yaml  no-retriever-hotpotqa.yaml  no-retriever-multihoprag.yaml  retriever-only-financebench.yaml  retriever-only-multihoprag.yaml  rise1--rag-and-agents--rise_insights_hf.yaml  seeding1--training--crag_hf-music--music.yaml  seeding1--training--financebench_hf.yaml  (+2 more)
syftr/: __init__.py  api.py  baselines.py  cli.py  configuration.py  core.py  custom_metrics.py  evaluation.py  experiments.py  flows.py  helpers.py  hierarchical_tpe.py  huggingface_helper.py  llm.py  logger.py  optimization.py  optuna_helper.py  patches.py  prompt_optimization.py  pruning.py  startup.py  storage.py  studies.py  studyconfig_helper.py  templates.py  transfer_learning.py  validation.py
syftr/agents/: graph.py
syftr/evaluation/: evaluation.py  evaluator_factory.py  factory.py
syftr/instrumentation/: tokens.py
syftr/output_parsers/: judge.py
syftr/plotting/: insights.py
syftr/prompts/: judge.py
syftr/ray/: runtime_env.py  submit.py  utils.py
syftr/retrievers/: build.py  cached_retriever.py  storage.py
syftr/scripts/: build_flow.py  build_retriever_flow.py  clear_ray_cache.py  create_onnx.py  delete_study.py  export_phantomwiki_to_hf.py  generate_training_data.py  replace_models_pareto.py  rerun_incomplete.py  run_benchmarks.py  system_check.py
syftr/scripts/experiments/: cerebras_mix.py  judge_data_gen.py  llm_judge_adherence.py  rise.py  seeding.py  silver_bullets.py  test_judge_flow.py  thinking.py
syftr/tuner/: agent_tuner.py  core.py  qa_tuner.py
syftr/utils/: locks.py
tests/: conftest.py
tests/data/: syftr.db
tests/functional/: conftest.py  test_configurable_models.py  test_hf_datasets.py  test_initialization.py
tests/functional/flows/: conftest.py  test_agentic_rag.py  test_rag.py  test_reasoning.py  test_study.py
tests/integration/: test_api_e2e.py
tests/studies/: test-study-src.yaml
tests/unit/: mock_trials_df.pkl  test_api.py  test_cardinality.py  test_configuration.py  test_evaluator_factory.py  test_factory.py
