[project]
name = "syftr"
requires-python = ">= 3.12.3,<3.13"
description = "syftr is an agent optimizer that helps you find the best agentic workflows for your budget."
readme = "README.md"
dynamic=["version"]
dependencies = [
    "aiolimiter",
    "asyncio",
    "boto3",
    "botocore",
    "cloudpickle",
    "colorlog",
    "datasets",
    "diskcache",
    "faiss-cpu",
    "filelock",
    "flock",
    "fsspec",
    "google-cloud-aiplatform",
    "gitpython",
    "html2text",
    "huggingface-hub",
    "ipdb",
    "kaleido==0.2.1",
    "kneed",
    "langchain",
    "llama-index",
    "llama-index-agent-introspective",
    "llama-index-agent-lats",
    "llama-index-agent-openai",
    "llama-index-callbacks-arize-phoenix",
    "llama-index-cli",
    "llama-index-core",
    "llama-index-embeddings-azure-openai",
    "llama-index-embeddings-fastembed",
    "llama-index-embeddings-huggingface",
    "llama-index-embeddings-huggingface-optimum",
    "llama-index-embeddings-openai",
    "llama-index-embeddings-openai-like",
    "llama-index-indices-managed-llama-cloud",
    "llama-index-legacy",
    "llama-index-llms-anthropic",
    "llama-index-llms-azure-inference",
    "llama-index-llms-azure-openai",
    "llama-index-llms-cerebras",
    "llama-index-llms-huggingface",
    "llama-index-llms-ollama",
    "llama-index-llms-openai",
    "llama-index-llms-vertex==0.4.3",
    "llama-index-llms-vllm",
    "llama-index-multi-modal-llms-openai",
    "llama-index-program-openai",
    "llama-index-question-gen-openai",
    "llama-index-readers-file",
    "llama-index-readers-llama-parse",
    "llama-index-retrievers-bm25",
    "llama-index-vector-stores-faiss",
    "llama-index-vector-stores-qdrant",
    "lz4",
    "maincontentextractor",
    "numba",
    "numpy",
    "openinference-instrumentation-llama-index==3.3.1",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "optimum[exporters]>=1.24.0",
    "optuna",
    "overrides",
    "pals",
    "pandas",
    "paretoset",
    "pip",
    "plotly",
    "psycopg2-binary",
    "pydantic-file-secrets",
    "pydantic-settings",
    "python-dotenv",
    "python-slugify",
    "rapidfuzz",
    "ray[client,data,default,serve,tune]",
    "rouge_score",
    "s3fs",
    "scikit-learn",
    "sentencepiece",
    "tabulate",
    "trace-opt",
    "transformers==4.48.3",
    "tree-sitter-languages",
    "tree-sitter",
    "types-protobuf",
    "types-pytz",
    "types-tabulate",
    "vertexai==1.68.0",
]
[tool.hatch.version]
source = "code"
path = "syftr/__init__.py"
requires-python = ">=3.12.3,<3.13"
source = "uv-dynamic-versioning"

[project.optional-dependencies]
dev = [
    "adjusttext",
    "altair",
    "ansible",
    "beautifulsoup4",
    "dataframe-image",
    "ipykernel",
    "ipython",
    "ipywidgets",
    "isort",
    "jupyter",
    "kneed",
    "matplotlib",
    "mypy",
    "nbformat",
    "nbstripout",
    "numba",
    "optuna-dashboard",
    "paretoset",
    "pre-commit",
    "pytest-rerunfailures",
    "python-slugify",
    "pytz",
    "rpdb",
    "ruff",
    "scipy",
    "seaborn",
    "spacy",
    "statsmodels",
    "types-PyYAML",
    "types-python-slugify",
    "types-requests",
    "types-tabulate",
    "xgboost",
    "yawsso",
]

[tool.setuptools.package-dir]
syftr = "syftr"

[tool.ruff]
exclude = ["notebooks", "plotting.py", "examples"]
line-length = 88
indent-width = 4
lint.select = [
    "E4",   # Enable pycodestyle import checks
    "E7",   # Enable pycodestyle 
    "E9",   # Enable pycodestyle errors checks
    "F",    # Enable pyflakes
    "PLE",  # Enable pylint errors
    "PLW",  # Enable pylint warnings
    "I001", # Enable import sorting
]
lint.ignore = [
    "E712", # Allow equality comparisons to `True`
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ['.venv', 'build', 'notebooks']

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--ignore=scratch"

[[tool.uv.index]]
name = "datarobot-python-dev"
url = "https://artifactory.devinfra.drdev.io/artifactory/api/pypi/python-1711"
publish-url = "https://artifactory.devinfra.drdev.io/artifactory/api/pypi/python-1711"
explicit = true


[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
